--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,39 @@
-services:
-  redis:
-    image: docker.io/bitnami/redis:7.2
-    environment:
-      # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      - ALLOW_EMPTY_PASSWORD=yes
-      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
-    ports:
-      - '6379:6379'
-    volumes:
-      - 'redis_data:/bitnami/redis/data'
-  postgres:
-    container_name: postgres
-    image: postgres
-    environment:
-      POSTGRES_DB: demo
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      PGDATA: /data/postgres
-    volumes:
-      - postgres:/data/postgres
-    ports:
-      - "54323:5432"
-    restart: unless-stopped
-
-volumes:
-  redis_data:
-    driver: local
-  postgres:
-
+version: "0.1"
 networks:
-  default:
-    driver: bridge
+  nginx-net:
+
+services:
+  api-service:
+    container_name: api-service
+    build: ./api-service/
+    ports:
+      - "8080:8080"
+    networks:
+      - nginx-net
+
+  blog-service:
+    container_name: blog-service
+    build: ./blog-service/
+    ports:
+      - "9000:9000"
+    networks:
+      - nginx-net
+
+  frontend:
+    container_name: frontend
+    build: ./frontend/
+    ports:
+      - "8000:8000"
+    networks:
+      - nginx-net
+
+  nginx:
+    container_name: nginx
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - "./nginx/default.conf:/etc/nginx/conf.d/default.conf"
+    networks:
+      - nginx-net
 
