--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,6 @@ spring:
     url: jdbc:postgresql://localhost:54323/demo?useSSL=false
     username: postgres
     password: postgres
-redis:
-  host: localhost
-  port: 6379
+  jpa:
+    hibernate:
+      ddl-auto: none
